[tool.poetry]
name = "cipher_kl3045"
version = "0.1.0"
description = "Python package that contains the cipher function."
authors = ["Kagen <kl3045@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
